services/blog-dev/overlays/staging/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devblog-worker
spec:
  template:
    spec:
      containers:
      - name: worker
