services/blog-dev/overlays/staging/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devblog
spec:
  tls:
  - hosts:
    - www.stg.in.takutakahashi.dev
    secretName: devblog-tls-secret
  rules:
  - host: www.stg.in.takutakahashi.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: devblog-web
            port:
              number: 80
